# BPD-002

./: .cursorrules  .gitignore  .gitmodules  .uv-pre-sync.sh  BPD-README.md  CLAUDE.md  CURSOR.md  GHDL-INSTALLATION-CHALLENGE.md  HUMAN_AI_JUMPSTART.md  MAIN-BRANCH-HANDOFF-SYSTEM.md  MIGRATION_TOOLS_README.md  README.md  WEB-AI-P2-HANDOFF.md  WEB-AI-P3-HANDOFF.md  claude-web-ai-README.txt  find_old_references.py  llms.txt  old_references_report.txt  pyproject.toml  recon.txt  replace_old_references.py  setup.sh
.archive/: README.old.md
.claude/shared/: AI_NAVIGATION_PROMPT.md  CODEX_SUPPORT.md  CONTEXT_MANAGEMENT.md
.claude/workflows/: codex-session-bootstrap.md
WIP/: PDA_ARCH_DRAFT.md  PDA_ARCH_REFINED.md
bpd/bpd-core/: CLAUDE.md  README.md  llms.txt  pyproject.toml
bpd/bpd-core/src/bpd_core/: __init__.py  interface.py  registers.py  registry.py  validation.py
bpd/bpd-drivers/: CLAUDE.md  README.md  llms.txt  pyproject.toml
bpd/bpd-drivers/src/bpd_drivers/: __init__.py  ds1120a.py
bpd/bpd-examples/: basic_probe_driver_example.py
bpd/bpd-sessions/: 2025-11-05-integration-testing.md  AGENT-ARCHITECTURE-PROPOSAL.md  DRY-RUN-FINDINGS.md  JC_PICKMEUP_HERE.md  NEXT-SESSION.md  SESSION-CLOSEOUT-2025-11-05.md  SESSION-HANDOFF-2025-11-05.md  WORKFLOW-DRY-RUN-PLAN.md
bpd/bpd-specs/: README.md
bpd/bpd-vhdl/: CLAUDE.md  README.md  llms.txt  pyproject.toml
bpd/bpd-vhdl/src/: basic_app_time_pkg.vhd  basic_probe_driver_custom_inst_main.vhd
bpd/bpd-vhdl/tests/: Makefile  test_basic_probe_fsm.py  test_fi_interface.py
bpd/examples/: 2025-11-04-TODO.md  quickstart.py
bpd/specs/: README.md  basic_probe_driver.yaml
docs/: GHDL_SETUP.md
tools/: sandbox-recon.sh
(+4 files in other folders)
