[project]
name = "bpd-core"
version = "0.1.0"
description = "Generic probe driver framework for Moku platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "moku-models",
]

[tool.uv.sources]
moku-models = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bpd_core"]
