[project]
name = "bpd-drivers"
version = "0.1.0"
description = "Probe-specific drivers implementing BPD interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "bpd-core",
    "moku-models",
    "riscure-models",
]

[tool.uv.sources]
bpd-core = { workspace = true }
moku-models = { workspace = true }
riscure-models = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bpd_drivers"]
