[project]
name = "bpd-vhdl"
version = "0.1.0"
description = "Vendor-agnostic VHDL components for FI probe control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cocotb>=2.0",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
